Closed Bug 242884 Opened 21 years ago Closed 21 years ago

Proxy config should require hostIP:port and/or error

Categories

(SeaMonkey :: Installer, defect)

x86
Linux
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: benc, Assigned: ajschult784)

Details

Attachments

(1 file, 6 obsolete files)

Mozilla 1.7RC1. STEPS: Launch Linux Net Installer. Enter a hostname -or a port (not both). The incomplete information causes the installer to quit when installation is started. EXPECTED: Either an error message in the dialog (hostIP -and- port are both required). Or, at least, ignore the proxy info and not die on install.
==> me
Assignee: general → ajschult
there is actually a deeper problem here... the installer can't tell when you delete a proxy field. Instead of deleting the setting like the hostname, it just sets the hostname to an empty (not NULL) string.
Attached patch patch (obsolete) — Splinter Review
I don't know if gtk_editable_get_chars can return NULL or not, so I've left the check for that in.
Attached patch patch (obsolete) — Splinter Review
without extraneous stuff from other bugs...
Attachment #147869 - Attachment is obsolete: true
Attachment #147870 - Flags: review?(dveditz)
QA Contact: bugzilla → agracebush
Attached patch patch (obsolete) — Splinter Review
include silly LAST_ERR diffs. filed bug 242908 to not have to mess with this anymore.
Attachment #147870 - Attachment is obsolete: true
Attachment #147879 - Flags: review?(dveditz)
Attachment #147870 - Flags: review?(dveditz)
Comment on attachment 147879 [details] [diff] [review] patch r=dveditz
Attachment #147879 - Flags: review?(dveditz) → review+
Attachment #147879 - Flags: superreview?(bryner)
Attachment #147879 - Flags: superreview?(bryner) → superreview+
Attached patch patch merged to trunk (obsolete) — Splinter Review
fixed
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Attached patch patch to un-hose installer (obsolete) — Splinter Review
I left out the installer.ini part of the patch
Comment on attachment 157467 [details] [diff] [review] patch to un-hose installer this is in
UPDATE: I see the error message if I try to use an incomplete proxy config and hit "ok" So the error dialog does appear when expected. However, there is a problem, the "ok" button still saves the changes. If you hit cancel (which would presumably discard your changes), and then press the proxy button again, you will see that your incomplete proxy config is set in the dialog. I've confirmed that the OK button is the cause (by independently unit testing the cancel button's behavior). If you try to install w/ this config, your install will die, and also send the follow error to the terminal screen: ./mozilla-installer: line 70: 1261 Segmentation fault ./mozilla-installer-bin $@
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Status: REOPENED → ASSIGNED
Attached patch patch (obsolete) — Splinter Review
this patch 1. fixes what benc mentioned in previous comment 2. fixes leaks 3. preserves previous settings on cancel (instead of clearing them)
Attachment #147879 - Attachment is obsolete: true
Attachment #157115 - Attachment is obsolete: true
Attachment #157467 - Attachment is obsolete: true
Attached patch the right patchSplinter Review
Attachment #159938 - Attachment is obsolete: true
Attachment #159939 - Flags: review?(dveditz)
Comment on attachment 159939 [details] [diff] [review] the right patch r=dveditz
Attachment #159939 - Flags: review?(dveditz) → review+
Attachment #159939 - Flags: superreview?(bryner)
Product: Browser → Seamonkey
Attachment #159939 - Flags: superreview?(bryner) → superreview+
fixed
Status: ASSIGNED → RESOLVED
Closed: 21 years ago21 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: