Bug 242884 Proxy config should require hostIP:port and/or error patch by ajschult@verizon.net r=dveditz sr=bryner